--- a/style.css
+++ b/style.css
@@ -1,4 +1,34 @@
 @font-face {
-    font-family:Raleway ;
+    font-family: Raleway ;
     src: url(Raleway/Raleway-VariableFont_wght.ttf);
+}
+html{
+    font-size: 100%;
+}
+body{
+    min-height: 100%;
+    margin: 0;
+    padding: 0;
+    display: block;
+    margin-top: 8px;
+    box-sizing: border-box;
+    display: table;
+    -moz-box-sizing: border-box;
+}
+footer{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    height: 100px;
+}
+.blocpage{
+    font-family: Raleway;
+    max-width: 1440px;
+    margin: auto;
+    padding: 0 2rem;
+    scroll-behavior: smooth;
+}
+/* Header */
+#logo{
+    display: flex;
 }
