--- a/style.css
+++ b/style.css
@@ -74,3 +74,24 @@ header{
     border-radius: 1rem 0 0 1rem;
     text-align: center;
 }
+.searchform{
+    border-left: none;
+    border-right: none;
+    border-top: #F2F2F2 1px solid;
+    border-bottom: #F2F2F2 1px solid;
+    height: 50px;
+    width: 14rem;
+    font-size: 1rem;
+    font-weight: bold;
+    text-align: center;
+}
+.submitinput{
+    background-color: #0065fc;
+    color: white;
+    font-weight: bold;
+    border: none;
+    border-radius:  0 1rem 1rem 0;
+    padding: 0 0.8rem;
+    font-size: 1rem;
+    cursor: se-resize;
+}
