--- a/style.css
+++ b/style.css
@@ -23,7 +23,6 @@ footer{
 }
 .blocpage{
     font-family: Raleway;
-    max-width: 1440px;
     margin: auto;
     padding: 0 2rem;
     scroll-behavior: smooth;
@@ -94,4 +93,193 @@ header{
     padding: 0 0.8rem;
     font-size: 1rem;
     cursor: se-resize;
+}
+/* Filters */
+.searchfiltersbox{
+    display: flex;
+    margin-top: 2rem;
+    flex-wrap: wrap;
+}
+.filterstitles{
+    margin: 0 2rem 1rem 0;
+    display: flex;
+    align-items: center;
+}
+.searchfilters{
+    display: flex;
+    align-items: center;
+    border: #d9d9d9 2px solid;
+    border-radius: 2rem;
+    margin-right: 2rem;
+    cursor: pointer;
+    font-weight: bold;
+}
+.searchfilterstitles{
+    text-align: center;
+    padding: 9px;
+}
+.searchfiltersframe{
+    border-color: #F2F2F2;
+    border-radius: 100%;
+    height: 3rem;
+    width: 3rem;
+    min-height: 3.5rem;
+    min-width: 3.5rem;
+    display: flex;
+    justify-content: center;
+    margin: -2px;
+}
+.seachfiltersicon{
+    color: #0065fc;
+    border-radius: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.searchfilters:hover{
+    background-color: #F2F2F2;
+    transform: scale(1.04);
+    transition-duration: 200ms;
+}
+#eco{
+    background-color: #DEEBFF;
+    color: #0065fc;
+    border-radius: 100%;
+    height: 3.25rem;
+    width: 3.25rem;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+#familial{
+    background-color: #DEEBFF;
+    color: #0065fc;
+    border-radius: 100%;
+    height: 3.25rem;
+    width: 3.25rem;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+#romantique{
+    background-color: #DEEBFF;
+    color: #0065fc;
+    border-radius: 100%;
+    height: 3.25rem;
+    width: 3.25rem;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+#animaux{
+    background-color: #DEEBFF;
+    color: #0065fc;
+    border-radius: 100%;
+    height: 3.25rem;
+    width: 3.25rem;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.infobox{
+    display: flex;
+    align-items: center;
+    margin-top: 1.5rem;
+    margin-bottom: 1.5rem;
+}
+.infoframe{
+    border: #d9d9d9 solid 1px;
+    height: 2rem;
+    width: 2rem;
+    border-radius: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-right: 15px;
+}
+.infotext{
+    font-weight: bold;
+}
+.infoicon{
+    color: #0065fc;
+}
+p{
+    display: block;
+    margin-block-start: 1em;
+    margin-block-end: 1em;
+    margin-inline-start: 0px;
+    margin-inline-end: 0px;
+}
+/* Offers */
+.offers{
+    display: grid;
+    grid-template-columns: 66% 33%;
+    column-gap: 2rem;
+}
+.housebox{
+    padding: 2rem;
+    background-color: #F2F2F2;
+    border-radius: 1.5rem;
+}
+.houseoffers{
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: repeat(2, 1fr);
+    grid-row-gap: 2rem;
+    grid-column-gap: 2rem;
+    margin-bottom: 2rem;
+}
+.card{
+    width: 100%;
+    box-shadow: 0 0 16px #d9d9d9;
+    border-radius: 1.5rem;
+    background-color: white;
+}
+.houseimgbox{
+    padding: 6px 6px 0 6px;
+}
+.houseimg{
+    object-fit: cover;
+    object-position: center;
+    height: 7vw;
+    width: 100%;
+    max-width: 100%;
+    max-height: 100%;
+    border-top-left-radius: 1.5rem;
+    border-top-right-radius: 1.5rem;
+}
+.housetitles{
+    margin: 2px 10px 5px 10px;
+}
+.housep{
+    margin: 0px 10px 5px 10px;
+}
+h3{
+    display: block;
+    font-size: 1.17em;
+    margin-block-start: 1em;
+    margin-block-end: 1em;
+    margin-inline-start: 0px;
+    margin-inline-end: 0px;
+    font-weight: bold;    
+}
+a{
+    text-decoration: none;
+    color: black;
+}
+.ratingstars{
+    margin: 0px 10px 5px 10px;
+    padding: 4px;
+    color: #0065fc; 
+}
+.ratingstarsicon[data-active=false]{
+    color: #d9d9d9;
+}
+.fa, .fab, .fad, .fal .far, .fas{
+    display: inline-block;
+    line-height: 1;
+}
+.viewmore{
+    font-weight: bold;
+    color: black;
 }
