--- a/style.css
+++ b/style.css
@@ -1,28 +1,13 @@
 @font-face {
-    font-family: Raleway ;
+    font-family: Raleway;
     src: url(Raleway/Raleway-VariableFont_wght.ttf);
 }
 html{
     font-size: 100%;
 }
-body{
-    min-height: 100%;
-    margin: 0;
-    padding: 0;
-    display: block;
-    margin-top: 8px;
-    box-sizing: border-box;
-    display: table;
-    -moz-box-sizing: border-box;
-}
-footer{
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    height: 100px;
-}
 .blocpage{
     font-family: Raleway;
+    max-width: 1440px;
     margin: auto;
     padding: 0 2rem;
     scroll-behavior: smooth;
@@ -45,23 +30,22 @@ footer{
     text-decoration: none;
     color: black;
     padding-top: 15px;
-    font-weight: bold;
 }
 a.nav:hover ,a.login:hover{
-    border-top: 2px solid #0065fc;
+    border-top: 2px solid #0065FC;
 }
 .login{
     display: flex;
     justify-content: center;
     text-decoration: none;
-    color: #0065fc;
+    color: #0065FC;
     padding-top: 15px;
     font-weight: bold;
 }
 header{
     font-size: 100%;
 }
-/* Search */
+/* Search + Filters */
 .searchbar{
     display: inline-flex;
     max-width: 100%;
@@ -85,22 +69,21 @@ header{
     text-align: center;
 }
 .submitinput{
-    background-color: #0065fc;
+    background-color: #0065FC;
     color: white;
     font-weight: bold;
     border: none;
-    border-radius:  0 1rem 1rem 0;
+    border-radius: 0 1rem 1rem 0;
     padding: 0 0.8rem;
     font-size: 1rem;
     cursor: se-resize;
 }
-/* Filters */
 .searchfiltersbox{
     display: flex;
     margin-top: 2rem;
     flex-wrap: wrap;
 }
-.filterstitles{
+.filterstitle{
     margin: 0 2rem 1rem 0;
     display: flex;
     align-items: center;
@@ -108,7 +91,7 @@ header{
 .searchfilters{
     display: flex;
     align-items: center;
-    border: #d9d9d9 2px solid;
+    border:2px solid  #d9d9d9;
     border-radius: 2rem;
     margin-right: 2rem;
     cursor: pointer;
@@ -126,11 +109,12 @@ header{
     min-height: 3.5rem;
     min-width: 3.5rem;
     display: flex;
+    align-items: center;
     justify-content: center;
     margin: -2px;
 }
-.seachfiltersicon{
-    color: #0065fc;
+.searchfiltersicon{
+    color: #0065FC;
     border-radius: 100%;
     display: flex;
     justify-content: center;
@@ -143,7 +127,7 @@ header{
 }
 #eco{
     background-color: #DEEBFF;
-    color: #0065fc;
+    color: #0065FC;
     border-radius: 100%;
     height: 3.25rem;
     width: 3.25rem;
@@ -153,7 +137,7 @@ header{
 }
 #familial{
     background-color: #DEEBFF;
-    color: #0065fc;
+    color: #0065FC;
     border-radius: 100%;
     height: 3.25rem;
     width: 3.25rem;
@@ -163,7 +147,7 @@ header{
 }
 #romantique{
     background-color: #DEEBFF;
-    color: #0065fc;
+    color:#0065FC;
     border-radius: 100%;
     height: 3.25rem;
     width: 3.25rem;
@@ -173,7 +157,7 @@ header{
 }
 #animaux{
     background-color: #DEEBFF;
-    color: #0065fc;
+    color: #0065FC;
     border-radius: 100%;
     height: 3.25rem;
     width: 3.25rem;
@@ -188,7 +172,7 @@ header{
     margin-bottom: 1.5rem;
 }
 .infoframe{
-    border: #d9d9d9 solid 1px;
+    border: solid 1px #d9d9d9;
     height: 2rem;
     width: 2rem;
     border-radius: 100%;
@@ -201,7 +185,7 @@ header{
     font-weight: bold;
 }
 .infoicon{
-    color: #0065fc;
+    color: #0065FC;
 }
 p{
     display: block;
@@ -209,6 +193,7 @@ p{
     margin-block-end: 1em;
     margin-inline-start: 0px;
     margin-inline-end: 0px;
+
 }
 /* Offers */
 .offers{
@@ -216,24 +201,15 @@ p{
     grid-template-columns: 66% 33%;
     column-gap: 2rem;
 }
-.housebox{
-    padding: 2rem;
-    background-color: #F2F2F2;
-    border-radius: 1.5rem;
-}
-.houseoffers{
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    grid-template-rows: repeat(2, 1fr);
-    grid-row-gap: 2rem;
-    grid-column-gap: 2rem;
-    margin-bottom: 2rem;
-}
 .card{
     width: 100%;
     box-shadow: 0 0 16px #d9d9d9;
     border-radius: 1.5rem;
     background-color: white;
+}
+a{
+    text-decoration: none;
+    color: black;
 }
 .houseimgbox{
     padding: 6px 6px 0 6px;
@@ -248,11 +224,21 @@ p{
     border-top-left-radius: 1.5rem;
     border-top-right-radius: 1.5rem;
 }
-.housetitles{
-    margin: 2px 10px 5px 10px;
+.housebox{
+    padding: 2rem;
+    background-color: #F2F2F2;
+    border-radius: 1.5rem;
 }
-.housep{
-    margin: 0px 10px 5px 10px;
+.houseoffers{
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: repeat(2, 1fr);
+    grid-row-gap: 2rem;
+    grid-column-gap: 2rem;
+    margin-bottom: 2rem;
+}
+.offtitles{
+    margin: 2px 10px 5px 10px;
 }
 h3{
     display: block;
@@ -261,25 +247,222 @@ h3{
     margin-block-end: 1em;
     margin-inline-start: 0px;
     margin-inline-end: 0px;
-    font-weight: bold;    
-}
-a{
-    text-decoration: none;
-    color: black;
+    font-weight: bold;
 }
 .ratingstars{
     margin: 0px 10px 5px 10px;
     padding: 4px;
-    color: #0065fc; 
+    color: #0065FC;
 }
-.ratingstarsicon[data-active=false]{
-    color: #d9d9d9;
+.ratingstarsicon[data-active=false] {
+    color: #d9d9d9; 
 }
-.fa, .fab, .fad, .fal .far, .fas{
+.fa, .fab, .fad, .fal, .far, .fas{
     display: inline-block;
     line-height: 1;
+}
+.offp{
+    margin: 0px 10px 5px 10px;
 }
 .viewmore{
     font-weight: bold;
     color: black;
 }
+/* Populaires */
+.card:hover, .popcar:hover{
+
+    transform: scale(1.06);
+    transition-duration: 200ms;
+}
+.popbox{
+    display: grid;
+    grid-template-rows: auto repeat(3, 1fr);
+    padding: 2rem;
+    grid-row-gap: 2rem;
+    background-color: #F2F2F2;
+    border-radius: 1.5rem;
+}
+aside > .popbox{
+    display: grid;
+    grid-template-columns: 1fr 2fr;
+}
+.popcard{
+    display: flex;
+    border-radius: 1rem;
+    background-color:white;
+    padding: 6px;
+    box-shadow: 0 0 16px #d9d9d9;
+}
+.popinbox{
+    position: relative;
+    width: 33%;
+    min-width: 33%;
+    max-width: 33%;
+    height: 100%;
+}
+.pophead{
+    margin: 0;
+    display: flex;
+    justify-content: space-between;
+}
+.popimg{
+    position: absolute;
+    width: 11%;
+    min-width: 11%;
+    max-width: 11%;
+    height: 100%;
+}
+.poptitles{
+    font-weight: bold;
+    margin: 0.25rem 0.75rem 0.25rem 0.75rem;
+}
+.popp{
+    margin: 0.25rem 0.75rem 0.25rem 0.75rem;
+}
+.textconteneur{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    margin: 4px;
+}
+.textconteneur>div.ratingstars{
+    margin: 0px 10px 0px 10px;
+}
+/* Activites  */
+section img{
+    border-style: none;
+}
+#activites{
+    margin-top: 4rem;
+}
+h2{
+    display: block;
+    font-size: 1.5em;
+    margin-block-start: 0.83em;
+    margin-block-end: 0.83em;
+    margin-inline-start: 0px;
+    margin-inline-end: 0px;
+    font-weight: bold;
+}
+.activitesconteneur{
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    grid-template-rows: auto 14rem 2rem 2rem 2rem 14rem;
+    column-gap: 2rem;
+}
+.imgconteneur{
+    position: relative;
+    flex: 1;
+    overflow: hidden;
+}
+.activitesconteneur{
+    position: absolute;
+    object-fit: cover;
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
+}
+.activitesimg{
+    position: absolute;
+    object-fit: cover;
+    width: 100%;
+
+}
+.cardtitles{
+    margin: 1.2rem 1.5rem;
+}
+.firstcard{
+    grid-area: 1 / 1 / 7 / 2;
+    display: flex;
+    flex-direction: column;
+    box-shadow: 0 0 16px #d9d9d9;
+    border-radius: 1rem;
+    overflow: hidden;
+}
+.secondcard{
+    grid-area: 1 / 2 / 5 / 3;
+    display: flex;
+    flex-direction: column;
+    box-shadow: 0 0 16px #d9d9d9;
+    border-radius: 1rem;
+    overflow: hidden;
+}
+.thirdcard{
+    grid-area: 6 / 2 / 7 / 3;
+    display: flex;
+    flex-direction: column;
+    box-shadow: 0 0 16px #d9d9d9;
+    border-radius: 1rem;
+    overflow: hidden;
+}
+.fourthcard{
+    grid-area: 1/ 3 / 7 / 4;
+    display: flex;
+    flex-direction: column;
+    box-shadow: 0 0 16px #d9d9d9;
+    border-radius: 1rem;
+    overflow: hidden;
+}
+.fifthcard{
+    grid-area: 1 / 4 / 4 / 5;
+    display: flex;
+    flex-direction: column;
+    box-shadow: 0 0 16px #d9d9d9;
+}
+.sixcard{
+    grid-area: 5 / 4 / 7 / 5;
+    display: flex;
+    flex-direction: column;
+    box-shadow: 0 0 16px #d9d9d9;
+    border-radius: 1rem;
+    overflow: hidden;
+}
+.firstcard:hover, .secondcard, .thirdcard, .fourthcard, .fifthcard{
+    transform: scale(1.06);
+    transition-duration: 200ms;
+    cursor: pointer;
+}
+/* Footer */
+.footer{
+    margin-top: 50px;
+    padding: 2rem;
+    font-family: "Raleway", "Arial", "sans-serif";
+    background-color: #F2F2F2;
+}
+.footerbox{
+    display: flex;
+    justify-content: space-between;
+    margin: auto;
+    max-width: 100%;
+    width: 1440px;
+}
+.columnone .columntwo .columnthree{
+    display: flex;
+    flex-direction: column;
+    width: 33%;
+    row-gap: 0.75rem;
+}
+.footlink{
+    text-decoration: none;
+    color: black;
+}
+/* Responsive */
+@media screen and (max-width:1195px){
+    .offers{
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: center;
+        gap: 2rem;
+    }
+    .popbox{
+        row-gap: 2rem;
+        padding: 2rem;
+        width: 100%;
+    }
+    .housebox{
+        grid-template-columns: auto;
+        grid-template-rows: repeat(6,1fr);
+        width: 100%;
+    }
+}
+@media screen and (max-width: 375px){}
